--- a/package.json
+++ b/package.json
@@ -47,11 +47,12 @@
         "@ionic-native/stepcounter": "^4.3.2",
         "@ionic/storage": "^2.0.1",
         "autoprefixer": "^7.1.5",
-        "cordova-android": "^6.3.0",
+        "cordova-android": "^6.2.3",
         "cordova-browser": "^5.0.1",
         "cordova-ios": "^4.5.2",
         "cordova-plugin-browsertab": "^0.2.0",
         "cordova-plugin-buildinfo": "^1.1.0",
+        "cordova-plugin-camera": "^2.4.1",
         "cordova-plugin-camera-preview": "^0.9.0",
         "cordova-plugin-compat": "^1.2.0",
         "cordova-plugin-console": "^1.1.0",
@@ -97,9 +98,15 @@
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
             "cordova-plugin-stepcounter": {},
-            "cordova-plugin-camera-preview": {}
+            "cordova-plugin-camera-preview": {},
+            "cordova-plugin-camera": {
+                "CAMERA_USAGE_DESCRIPTION": " ",
+                "PHOTOLIBRARY_USAGE_DESCRIPTION": " "
+            },
+            "cordova-plugin-compat": {}
         },
         "platforms": [
+            "android",
             "browser"
         ]
     }
