--- a/package.json
+++ b/package.json
@@ -65,11 +65,14 @@
         "cordova-universal-links-plugin": "^1.2.1",
         "eslint": "^4.9.0",
         "firebase": "^4.6.0",
+        "intl": "^1.2.5",
         "ionic-angular": "^3.7.1",
         "ionic-img-viewer": "^2.7.3",
         "ionic-plugin-keyboard": "^2.2.1",
+        "ionic2-calendar": "^0.3.11",
         "ionicons": "^3.0.0",
         "lodash": "^4.17.4",
+        "moment": "^2.19.1",
         "ng2-img-cropper": "^0.9.0",
         "promise-polyfill": "^6.0.2",
         "rxjs": "^5.5.0",
