--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@ionic-native/stepcounter": "^4.3.2",
         "@ionic/storage": "^2.0.1",
         "autoprefixer": "^7.1.5",
+        "chart.js": "^2.7.1",
         "cordova-android": "^6.2.3",
         "cordova-browser": "^5.0.1",
         "cordova-ios": "^4.5.2",
